# barcodesku

./: README.md  license.txt  pyproject.toml  requirements.txt  setup.py
barcodesku/: hooks.py  modules.txt  patches.txt
barcodesku/barcodesku/: api.py  setup.py
barcodesku/barcodesku/dashboard_chart/items_barcode_coverage/: items_barcode_coverage.json
barcodesku/barcodesku/doctype/barcode_rule/: barcode_rule.js  barcode_rule.json  barcode_rule.py
barcodesku/barcodesku/doctype/barcode_sku_settings/: barcode_sku_settings.js  barcode_sku_settings.json  barcode_sku_settings.py
barcodesku/barcodesku/doctype/sku_renamer/: sku_renamer.js  sku_renamer.json  sku_renamer.py
barcodesku/barcodesku/number_card/total_skus_generated/: total_skus_generated.json
barcodesku/barcodesku/page/print_barcode_labels/: print_barcode_labels.html  print_barcode_labels.js  print_barcode_labels.json  print_barcode_labels.py
barcodesku/barcodesku/page/scanner_validation/: scanner_validation.html  scanner_validation.js  scanner_validation.json  scanner_validation.py
barcodesku/barcodesku/patches/v1_1/: move_to_stock_workspace.py
barcodesku/barcodesku/patches/v1_2/: fix_stock_layout.py
barcodesku/barcodesku/print_format/item_barcode_label/: item_barcode_label.html  item_barcode_label.json
barcodesku/barcodesku/print_format/zpl_thermal_barcode/: zpl_thermal_barcode.html  zpl_thermal_barcode.json
barcodesku/barcodesku/utils/: analytics.py  generator.py  item_hooks.py
barcodesku/barcodesku/workspace/barcodesku/: barcodesku.json
barcodesku/public/js/: item_form.js
