[project]
name = "barcodesku"
authors = [
    { name = "Apexlogic", email = "hello@apexlogic.com"}
]
description = "Barcode and SKU Auto Generator for items in ERPNext"
require-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
